@@ -2647,17 +2647,28 @@ sock_sendto(PySocketSockObject *s, PyObject *args)
     Py_buffer pbuf;
     PyObject *addro;
     char *buf;
-    Py_ssize_t len;
+    Py_ssize_t len, arglen;
     sock_addr_t addrbuf;
     int addrlen, n = -1, flags, timeout;
 
     flags = 0;
-    if (!PyArg_ParseTuple(args, "y*O:sendto", &pbuf, &addro)) {
-        PyErr_Clear();
-        if (!PyArg_ParseTuple(args, "y*iO:sendto",
-                              &pbuf, &flags, &addro))
-            return NULL;
+    arglen = PyTuple_Size(args);
+    switch (arglen) {
+        case 2:
+            PyArg_ParseTuple(args, "y*O:sendto", &pbuf, &addro);
+            break;
+        case 3:
+            PyArg_ParseTuple(args, "y*iO:sendto",
+                             &pbuf, &flags, &addro);
+            break;
+        default:
+            PyErr_Format(PyExc_TypeError,
+                         "sendto() takes 2 or 3 arguments (%d given)",
+                         arglen);
     }
+    if (PyErr_Occurred())
+        return NULL;
+
     buf = pbuf.buf;
     len = pbuf.len;
 
